# mcp-papersearch

./: README.md  pyproject.toml
src/papersearch/: server.py
