[project]
name = "papersearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.1.3",
    "mcp>=1.1.2",
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
papersearch = "papersearch:main"

